# text-to-sql-generator

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
generator/: __main__.py  data.py  database.py  exceptions.py  generate.py  log.py  utils.py
